--- a/app/src/main/res/layout-v19/item_cast.xml
+++ b/app/src/main/res/layout-v19/item_cast.xml
@@ -8,22 +8,13 @@
     android:gravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:elevation="@dimen/card_view_elevation"
-        app:cardCornerRadius="45dp">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/iv_castImage"
-            android:scaleType="centerCrop"
-            android:background="@android:color/darker_gray"
-            android:foreground="?android:attr/selectableItemBackground"
-            />
-
-    </android.support.v7.widget.CardView>
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/iv_castImage"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:civ_border_width="2dp"
+        app:civ_border_color="#D3D3D3"/>
 
     <TextView
         android:id="@+id/text_view_cast_name"
